--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alice&family=Alumni+Sans+Pinstripe:ital@0;1&display=swap" rel="stylesheet">
 
-    <title>Vite + React + TS</title>
+    <title>Catan</title>
   </head>
   <body style="margin: 0; padding: 0">
     <div id="root"></div>
